2014-11-19  Richard Henderson  <rth@redhat.com>

	* gcc.dg/cwsc0.c: New test.
	* gcc.dg/cwsc1.c: New test.

2014-11-19  Marek Polacek  <polacek@redhat.com>

	PR sanitizer/63879
	* c-c++-common/ubsan/pr63879-1.c: New test.
	* c-c++-common/ubsan/pr63879-2.c: New test.

2014-11-19  Tom de Vries  <tom@codesourcery.com>

	PR tree-optimization/62167
	* gcc.dg/pr51879-12.c: Add xfails.
	* gcc.dg/pr62167-run.c: New test.
	* gcc.dg/pr62167.c: New test.

2014-11-19  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/63915
	* c-c++-common/gomp/pr60823-4.c: New test.

	PR sanitizer/63520
	* c-c++-common/ubsan/pr63520.c: New test.

2014-11-19  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/57654
	* g++.dg/cpp0x/constexpr-ref7.C: New.

2014-11-19  Jakub Jelinek  <jakub@redhat.com>

	PR sanitizer/63913
	* g++.dg/ubsan/pr63913.C: New test.

2014-11-19  Andreas Schwab  <schwab@suse.de>

	* gcc.dg/pure-2.c: Update line numbers.

2014-11-19  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/63843
	* gcc.c-torture/execute/pr63843.c: New test.

2014-11-18  James Greenhalgh  <james.greenhalgh@arm.com>

	PR target/63937
	* gcc.dg/memset-2.c: New.

2014-11-18  Jakub Jelinek  <jakub@redhat.com>

	PR sanitizer/63813
	* g++.dg/ubsan/pr63813.C: New test.

	PR tree-optimization/61042
	* gcc.c-torture/compile/pr61042.c: New test.

2014-11-18  Maciej W. Rozycki  <macro@codesourcery.com>

	* gcc.dg/atomic/c11-atomic-exec-5.c (dg-timeout-factor): New
	setting.

2014-11-18  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/55942
	* g++.dg/cpp0x/constexpr-55942.C: New.

2014-11-18  Marek Polacek  <polacek@redhat.com>

	PR sanitizer/63866
	* c-c++-common/ubsan/pr63866.c: New test.

2014-11-18  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/63914
	* gcc.dg/pr63914.c: New testcase.

2014-11-18  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/55443
	* g++.dg/cpp0x/noexcept26.C: New.
	* g++.dg/cpp0x/noexcept27.C: Likewise.
